# shizu

./: CMakeLists.txt  README.md  backup.ps1
CMake/: all.cmake  configure_warnings_and_errors.cmake  define_languages.cmake  detect_compiler.cmake  detect_instruction_set_architecture.cmake  detect_multi_target_generator.cmake  detect_operating_system.cmake  detect_void_pointer_size.cmake
Documentation/: README.md  Shizu_State2.md  Shizu_State2_create.md  Shizu_State2_destroy.md  Shizu_State2_getStatus.md  Shizu_State2_popJumpTarget.md  Shizu_State2_pushJumpTarget.md  Shizu_State2_setStatus.md  Shizu_Status.md  Shizu_String_create.md  architecture.md  building-under-linux-clang.md  building-under-linux-gcc.md  building-under-windows-11-visual-studio-2022.md  building-under-windows-11-visual-studio-community-2022.md
Documentation/List/: Shizu_List_appendValue.md  Shizu_List_getSize.md  Shizu_List_getValue.md  Shizu_List_insertValue.md  Shizu_List_prependValue.md
Documentation/Map/: Shizu_Map_getSize.md
Documentation/Stack/: Shizu_Stack_getSize.md  Shizu_Stack_push.md  Shizu_Stack_pushBoolean.md  Shizu_Stack_pushCxxFunction.md  Shizu_Stack_pushFloat32.md  Shizu_Stack_pushInteger32.md  Shizu_Stack_pushObject.md  Shizu_Stack_pushVoid.md
Libraries/IdLib.BitScan/documentation/: idlib_count_leading_zeroes.md  idlib_is_power_of_two.md  idlib_power_of_two_ge.md
Libraries/IdLib.ByteSequence/: CMakeLists.txt  README.md  integrating-into-cmake-projects.md
Libraries/IdLib.ByteSequence/documentation/: idlib-byte-sequence.md  idlib_byte_sequence_copy.md  idlib_byte_sequence_fill_value.md  idlib_byte_sequence_find.md  idlib_byte_sequence_find_value.md  idlib_byte_sequence_starts_with.md
Libraries/IdLib.FileSystem/: CMakeLists.txt  integrating-into-cmake-projects.md
Libraries/IdLib.FileSystem/documentation/: idlib-file-system.md  idlib_get_working_directory.md
Libraries/IdLib.Process/: CMakeLists.txt
Libraries/IdLib.Process/cmake/: detect_multi_target_generator.cmake
Libraries/IdLib.Process/documentation/: idlib-process.md  idlib_mutex.md  idlib_mutex_initialize.md  idlib_mutex_uninitialize.md  idlib_process.md  idlib_process_relinquish.md  idlib_status.md
Libraries/idlib-bit-scan/: CMakeLists.txt  README.md  building-under-linux.md  building-under-windows-11-visual-studio-community-2022.md  integrating-into-cmake-projects.md
Libraries/idlib-byte-sequence/: CMakeLists.txt  README.md  building-under-linux.md  building-under-windows-11-visual-studio-community-2022.md  integrating-into-cmake-projects.md
Libraries/idlib-file-system/: CMakeLists.txt  README.md  building-under-windows-11-visual-studio-community-2022.md  integrating-into-cmake-projects.md
Libraries/idlib-process/: README.md  building-under-linux.md  building-under-windows-11-visual-studio-2022.md  integrating-into-cmake-projects.md
Modules/: CMakeLists.txt
Modules/Compiler/: CMakeLists.txt
Modules/Compiler/DynamicLibrary/: CMakeLists.txt
Modules/Compiler/DynamicLibrary/Includes/Compiler/: Ast.h  Atoms.h  Object.h  Parser.h  Scanner.h  Token.h
Modules/Compiler/DynamicLibrary/Sources/: Main.c
Modules/Compiler/DynamicLibrary/Sources/Compiler/: Ast.c  Atoms.c  Object.c  Parser.c  Scanner.c  Token.c
Modules/DataDefinitionLanguage/: CMakeLists.txt
Modules/FileSystem/: CMakeLists.txt
Modules/FileSystem/DynamicLibrary/: CMakeLists.txt
Modules/FileSystem/DynamicLibrary/Includes/FileSystem/: Utilities.h  deleteFile.h  getFileContents.h  getWorkingDirectory.h  isAbsolutePath.h  isRelativePath.h  setFileContents.h
Modules/FileSystem/DynamicLibrary/Sources/: Main.c
Modules/FileSystem/DynamicLibrary/Sources/FileSystem/: Utilities.c  deleteFile.c  getFileContents.c  getWorkingDirectory.c  isAbsolutePath.c  isRelativePath.c  setFileContents.c
Modules/FileSystem/Tests/: CMakeLists.txt
Modules/FileSystem/Tests/Sources/: Main.c
Modules/FileSystem/Tests/Sources/FileSystem/Tests/: Main.c  getFileContents.c  getFileContents.h  setFileContents.c  setFileContents.h
Modules/MachineLanguage/: CMakeLists.txt
Modules/MachineLanguage/DynamicLibrary/: CMakeLists.txt
Modules/MachineLanguage/DynamicLibrary/Includes/Compiler/: Ast.h  Parser.h  Scanner.h  Token.h
Modules/MachineLanguage/DynamicLibrary/Includes/MachineLanguage/: Ast.h  Atoms.h  Parser.h  Scanner.h  Token.h
Modules/MachineLanguage/DynamicLibrary/Sources/: Main.c
Modules/MachineLanguage/DynamicLibrary/Sources/Compiler/: Ast.c  Object.c  Parser.c  Scanner.c  Token.c
Modules/MachineLanguage/DynamicLibrary/Sources/MachineLanguage/: Ast.c  Atoms.c  Parser.c  Scanner.c  Token.c
Modules/MachineLanguage/Tests/Scanner/: CMakeLists.txt
Modules/MachineLanguage/Tests/Scanner/Sources/: Main.c
Specification/: CMakeLists.txt
Specification/ddl-spec/: CMakeLists.txt  index.tex
Specification/ml-spec/: CMakeLists.txt  index.tex
Test/: CMakeLists.txt
Test/BigFloat/: CMakeLists.txt
Test/BigInteger/: CMakeLists.txt
Test/BigInteger/Sources/Shizu.Runtime.Test.BigInteger/: Main.c
Test/BigInteger/Sources/Shizu.Test.BigInteger/: Main.c  testArithmetic.c  testArithmetic.h  testDefault.c  testDefault.h  testFromInteger.c  testFromInteger.h  testFromString.c  testFromString.h  testToInteger.c  testToInteger.h  testType.c  testType.h
Test/BigInteger/Sources/Shizu.Test.BigInteger10/: testArithmetic.c  testArithmetic.h  testDefault.c  testDefault.h  testFromInteger.c  testFromInteger.h  testFromString.c  testFromString.h  testToInteger.c  testToInteger.h  testType.c  testType.h
Test/BigInteger/Sources/Shizu.Test.BigInteger2/: testType.c  testType.h
Test/ByteArray/: CMakeLists.txt
Test/CountLeadingZeroes/: CMakeLists.txt
Test/CountTrailingZeroes/: CMakeLists.txt
Test/Fundamental/: CMakeLists.txt
Test/IsPowerOfTwo/: CMakeLists.txt
Test/PowerOfTwoGreaterThan/: CMakeLists.txt
Test/PowerOfTwoGreaterThanOrEqualTo/: CMakeLists.txt
Test/ToFloatOperations/: CMakeLists.txt
Test/ToIntegerOperations/: CMakeLists.txt
Test/bytearray/: CMakeLists.txt
Test/fundamental/: CMakeLists.txt
Website/: index.html
(+112 files in other folders)
