# Copyright (c) 2024 Michael Heilmann. All rights reserved.

# The following code generates project files to build (and clean) the "Abstract Machine Specification".
# - For the MAKE generator this manifests as a make file.
# - For the VISUAL STUDIO generator this manifests as a project.
# - ...

add_subdirectory(ml-spec)
